@@ -1,0 +1,8 @@
+lod2-virtuoso-opensource for Debian
+-----------------------------------
+
+This package installs the virtuoso-opensource package for a lod stack and tries to handle all dependency issues that might occur
+
+
+
+
